[package]
publish = false
name = "tody-chat"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.24"
clap = { git = "ssh://git@github.com/clap-rs/clap" }
env_logger = "0.7.1"
failure = "0.1.6"
futures = "0.3.4"
log = "0.4.8"
meio = { git = "ssh://git@github.com/DenisKolodin/meio" }
rusqlite = "0.21.0"
tokio = { version = "0.2.13", features = ["full"] }
warp = "0.2.2"
