[package]
publish = false
name = "tody-chat"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
async-trait = "0.1.24"
bytes = "0.5.4"
clap = { git = "ssh://git@github.com/clap-rs/clap" }
env_logger = "0.7.1"
flate2 = "1.0.13"
futures = "0.3.4"
headers = "0.3.1"
log = "0.4.8"
meio = { git = "ssh://git@github.com/DenisKolodin/meio" }
mime_guess = "2.0.3"
protocol = { path = "./protocol" }
rusqlite = "0.21.0"
serde = "1.0.104"
serde_cbor = "0.11.1"
serde_json = "1.0.48"
tar = "0.4.26"
thiserror = "1.0.11"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["codec"] }
warp = "0.2.2"

[build-dependencies]
async-trait = "0.1.24"
failure = "0.1.6"
tokio = { version = "0.2.13", features = ["full"] }

[features]
default = []
refresh = []
