[package]
publish = false
name = "tody-chat-ui"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
wasm-bindgen = "0.2.59"
yew = { git = "ssh://git@github.com/yewstack/yew", features = ["web_sys"] }
